--- a/package.json
+++ b/package.json
@@ -20,8 +20,16 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@fullcalendar/angular": "^6.1.10",
+    "@fullcalendar/core": "^6.1.11",
+    "@fullcalendar/daygrid": "^6.1.11",
+    "@fullcalendar/list": "^6.1.11",
+    "@fullcalendar/timegrid": "^6.1.11",
+    "@ng-bootstrap/ng-bootstrap": "^11.0.0",
     "@types/moment": "^2.13.0",
+    "date-fns": "^3.6.0",
     "moment": "^2.30.1",
+    "primeng": "^15.2.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.10.8",
     "tslib": "^2.3.0",
